# iPCF

./: .gitignore  README.md  dune-project  ipcf.opam
examples/: example.ipcf  fixed-point.ipcf  math.ipcf  norm-tick.ipcf  por.ipcf  ski.ipcf
lib/: dune  evaluator.ml  intops.ml  lexer.ml  lexer.mli  moduletypes.ml  parser.ml  repl.ml  typing.ml  typing.mli
